Change class shortcode with span tags with class key

--- a/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
@@ -11,8 +11,9 @@ topic: ""
 images: []
 ---
 
-De beduidende cijfers zijn de cijfers in een getal **vanaf het eerste cijfer dat verschillend is van nul**. Ze zijn hieronder aangeduid in het
-{{< class "oranje" "orange" >}}:
+De beduidende cijfers zijn de cijfers in een getal **vanaf het eerste cijfer 
+dat verschillend is van nul**. Ze zijn hieronder aangeduid in het <span 
+class="orange">oranje</span>:
 
 $$-0{,}000\orange{50846}$$
 $$0{,}\orange{950}\cdot{10^3}$$
