--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -49,22 +49,22 @@ Je ziet dat vermenigvuldigen met een macht van 10
 ervoor zorgt dat de **komma verschuift**.
 De komma verschuift **naar links bij negatieve machten** en ze verschuift **naar rechts bij positieve machten**.
 
-Vermenigvuldigingen met $10^{\orange{2}}$, bijvoorbeeld, verschuift de komma {{< class "2 plaatsen naar rechts" "orange" >}}.
-Vermenigvuldigingen met $10^{\orange{-3}}$, verschuift de komma {{< class "3 plaatsen naar links" "orange" >}}.
+Vermenigvuldigingen met $10^{\orange{2}}$, bijvoorbeeld, verschuift de komma <span class="orange">2 plaatsen naar rechts</span>.
+Vermenigvuldigingen met $10^{\orange{-3}}$, verschuift de komma <span class="orange">3 plaatsen naar links</span>.
 
 ## Getallen omzetten naar een macht van 10
 
 Nu zullen we zien hoe we aan die $\orange{10^{-9}}$ kwamen bij het voorbeeld
 van $0{,}00000000334 = 3{,}34\cdot \orange{10^{-9}}$.
 We willen de komma van $0{,}00000000334$ met
-**{{< class "9 plaatsen naar rechts" "blue" >}}** verschuiven tot na de eerste
+**<span class="blue">9 plaatsen naar rechts</span>** verschuiven tot na de eerste
 
 3. Dat zouden we kunnen doen door te
-   **{{< class "vermenigvuldigen met $10^9$" "blue" >}}**.
+   **<span class="blue">vermenigvuldigen met $10^9$</span>**.
    **Maar** we willen dat onze uitkomst
-   **{{< class "nog steeds gelijk is" "orange" >}}** aan $0{,}00000000334$. Daarom
+   **<span class="orange">nog steeds gelijk is</span>** aan $0{,}00000000334$. Daarom
    moeten we ook terug
-   **{{< class "delen door $10^9$" "orange" >}}**.
+   **<span class="orange">delen door $10^9$</span>**.
 
 \begin{split}
 0{,}00000000334 &= 0{,}00000000334 \cdot \frac{\blue{10^9}}{\orange{10^9}} \\\\\
@@ -73,24 +73,24 @@ We willen de komma van $0{,}00000000334$ met
  &= \udotblue{3{,}34} \cdot \orange{10^{-9}}
 \end{split}
 
-Het **{{< class "delen door $10^9$" "orange" >}}** komt neer op
-een **{{< class "vermenigvuldigen met $10^{-9}$" "orange" >}}**. We kunnen dus ook
+Het **<span class="orange">delen door $10^9$</span>** komt neer op
+een **<span class="orange">vermenigvuldigen met $10^{-9}$</span>**. We kunnen dus ook
 zeggen dat we
-**{{< class "vermenigvuldigen met $10^9$" "blue" >}}** om de komma
-**{{< class "9 plaatsen naar rechts" "blue" >}}** te verschuiven en vervolgens
-**{{< class "vermenigvuldigen met $10^{-9}$" "orange" >}}** om alles
-**{{< class "gelijk te houden" "orange" >}}**.
+**<span class="blue">vermenigvuldigen met $10^9$</span>** om de komma
+**<span class="blue">9 plaatsen naar rechts</span>** te verschuiven en vervolgens
+**<span class="orange">vermenigvuldigen met $10^{-9}$</span>** om alles
+**<span class="orange">gelijk te houden</span>**.
 
 Een ander voorbeeld is dat we een heel groot getal korter willen schrijven. De
 afstand tussen de zon en de aarde, bijvoorbeeld, bedraagt ongeveer
 $149\ 600\ 000\ 000\ \si{m}$. Dit kunnen we korter schrijven door de komma
-**{{< class "11 plaatsen naar links" "blue" >}}** te schuiven tot net na de 1.
+**<span class="blue">11 plaatsen naar links</span>** te schuiven tot net na de 1.
 Dat zouden we kunnen doen door te
-**{{< class "vermenigvuldigen met $10^{-11}$" "blue" >}}**. **Maar** we willen
+**<span class="blue">vermenigvuldigen met $10^{-11}$</span>**. **Maar** we willen
 natuurlijk dat onze uitkomst
-**{{< class "nog steeds gelijk is" "orange" >}}** aan $149\ 600\ 000\ 000$.
+**<span class="orange">nog steeds gelijk is</span>** aan $149\ 600\ 000\ 000$.
 Daarom moeten we ook terug delen door $10^{-11}$. Dat is echter hetzelfde als
-**{{< class "vermenigvuldigen met $10^{11}$" "orange" >}}**.
+**<span class="orange">vermenigvuldigen met $10^{11}$</span>**.
 
 \begin{split}
 149\ 600\ 000\ 000 &= \udotblue{149\ 600\ 000\ 000 \cdot \blue{10^{-11}}} \cdot \orange{10^{11}} \\\\\
@@ -107,9 +107,9 @@ Soms zullen we ook machten van 10 moeten omzetten naar andere machten van 10.
 We willen onze $3{,}34 \cdot 10^{-9}$ bijvoorbeeld omzetten naar
 $\orange{\ldots\text{iets}\ldots} \cdot \blue{10^{-11}}$. Om dat te doen,
 zullen we de $3{,}34 \cdot 10^{-9}$
-**{{< class "vermenigvuldigen met $10^{-11}$ om de juiste macht van 10 te hebben" "blue" >}}**
+**<span class="blue">vermenigvuldigen met $10^{-11}$ om de juiste macht van 10 te hebben</span>**
 en vervolgens
-**{{< class "vermenigvuldigen met $10^{11}$ om het getal gelijk te houden" "orange" >}}**.
+**<span class="orange">vermenigvuldigen met $10^{11}$ om het getal gelijk te houden</span>**.
 
 \begin{split}
 3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot \udotorange{10^{-9} \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\\\\
@@ -123,9 +123,9 @@ en vervolgens
 {{< attention "Omzetten naar macht van 10" >}}
 
 -   Als je de komma $N$ plaatsen **naar rechts** wilt opschuiven:
-    Vermenigvuldig met {{< class "$10^{N}$ om de komma op te schuiven" "blue" >}} en met {{< class "$10^{-N}$ om het getal gelijk te houden" "orange" >}}.
+    Vermenigvuldig met <span class="blue">$10^{N}$ om de komma op te schuiven</span> en met <span class="orange">$10^{-N}$ om het getal gelijk te houden</span>.
 -   Als je de komma $N$ plaatsen **naar links** wilt opschuiven:
-    Vermenigvuldig met {{< class "$10^{-N}$ om de komma op te schuiven" "blue" >}} en met {{< class "$10^N$ om het getal gelijk te houden" "orange" >}}.
+    Vermenigvuldig met <span class="blue">$10^{-N}$ om de komma op te schuiven</span> en met <span class="orange">$10^N$ om het getal gelijk te houden</span>.
     {{< /attention >}}
 
 {{< attention "Omzetten van een macht van 10" >}}
@@ -133,8 +133,8 @@ Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot \blue{10
 <Mute text="(met $a, b, c \in \mathbb{R}$)" />:
 
 Vermenigvuldig $a \cdot 10^b$ met
-{{< class "$10^{c}$ om de juiste macht van 10 te hebben" "blue" >}} en met
-{{< class "$10^{-c}$ om alles gelijk te houden" "orange" >}} aan $a \cdot 10^b$.
+<span class="blue">$10^{c}$ om de juiste macht van 10 te hebben</span> en met
+<span class="orange">$10^{-c}$ om alles gelijk te houden</span> aan $a \cdot 10^b$.
 Combineer vervolgens de $a \cdot 10^{b} \cdot \orange{10^{-c}}$ tot één getal en
 laat de $\cdot \blue{10^{c}}$ erachter staan.
 
