--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -45,15 +45,15 @@ ondoorschijnende zwarte bol en een scherm met drie gebieden: **A**, **B**, en
 
 ![](img/puntbron_straal_schaduwen.png)
 
-Je ziet dat er in **{{< class "gebied A" "green" >}}** evenveel lichtstralen
-geraken als in **{{< class "gebied B" "green" >}}**. Gebieden **{{< class "A en B" "green" >}}** zijn dus even fel belicht. In
-**{{< class "gebied C" "dark-red" >}}** geraken **geen lichtstralen** omdat de
+Je ziet dat er in **<span class="green">gebied A</span>** evenveel lichtstralen
+geraken als in **<span class="green">gebied B</span>**. Gebieden **<span class="green">A en B</span>** zijn dus even fel belicht. In
+**<span class="dark-red">gebied C</span>** geraken **geen lichtstralen** omdat de
 ondoorschijnende bol in de weg staat.
-**{{< class "Gebied C" "dark-red" >}}** wordt dus minder belicht dan gebieden
-**{{< class "A en B" "green" >}}**. **{{< class "Gebied C" "dark-red" >}}** zal
+**<span class="dark-red">Gebied C</span>** wordt dus minder belicht dan gebieden
+**<span class="green">A en B</span>**. **<span class="dark-red">Gebied C</span>** zal
 daarom **donkerder** zijn dan gebieden
-**{{< class "A en B" "green" >}}**. We zien in
-**{{< class "gebied C" "dark-red" >}}** een **schaduw**:
+**<span class="green">A en B</span>**. We zien in
+**<span class="dark-red">gebied C</span>** een **schaduw**:
 
 ![](img/puntbron_straal_schaduwen_resultaat.png)
 
