--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -41,7 +41,7 @@ De [grafiek](../functies/grafiek) van deze functies ziet er als volgt uit:
 
 ![](plt/snijpunt.png)
 
-Het oranje punt duidt het {{< class "snijpunt" "orange" >}} aan van de twee functies. Hoe kunnen we de coördinaten van dit snijpunt vinden?
+Het oranje punt duidt het <span class="orange">snijpunt</span> aan van de twee functies. Hoe kunnen we de coördinaten van dit snijpunt vinden?
 
 Een snijpunt is een punt dat zowel op de grafiek van $\green{f}$ als op de grafiek van $\blue{g}$ ligt. Denkend aan onze analogie van [het machientje](../functies/intro#een-functie-is-een-machientje), is de $x-$waarde van een snijpunt een **ingang die voor zowel $\green{f}$ als $\blue{g}$ dezelfde uitgang geeft**.
 
@@ -104,14 +104,14 @@ Op de grafiek bovenaan zien we dat dit punt inderdaad overeenkomt met het snijpu
 
 ## Nulpunten zoeken van functies
 
-Als we een {{< class "nulwaarde" "orange" >}} van een functie in die functie stoppen, komt er $0$ uit de functie.
+Als we een <span class="orange">nulwaarde</span> van een functie in die functie stoppen, komt er $0$ uit de functie.
 
 ![](img/conveyor_nulpunt_1.png)
 
 Stel dat $\orange{x}$ een [nulwaarde](../functies/nulpunten#nulwaarden-van-een-functie) van functie $f(x) = -x + 4$ is, dan is $f(\orange{x}) = 0$, of na invullen:
 $$-\orange{x} + 4 = 0$$
 
-En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de {{< class "nulwaarde" "orange" >}} van de functie.
+En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de <span class="orange">nulwaarde</span> van de functie.
 
 \begin{split}
 -\orange{x} + 4 &= 0\\\\\
