--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -111,8 +111,8 @@ $-4x^\orange{1}y^\blue{3}$ en $\orange{1} + \blue{3} = 4$.
 
 We kunnen ook de graad opdelen **per variabele**. De eenterm
 $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
-**{{< class "tweede graad in $x$" "orange" >}}** en van de
-**{{< class "derde graad in $y$" "blue" >}}**.
+**<span class="orange">tweede graad in $x$</span>** en van de
+**<span class="blue">derde graad in $y$</span>**.
 
 | Eenterm                              | Graad per variabele                                      |
 | ------------------------------------ | -------------------------------------------------------- |
