--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -81,7 +81,7 @@ Die grafiek ziet er zo uit:
 
 Om op deze grafiek het **domein** af te lezen, moet je de grafiek **projecteren
 op de x-as**. Het resultaat van de projectie
-is aangeduid **{{< class "in het groen op de x-as" "green" >}}**.
+is aangeduid **<span class="green">in het groen op de x-as</span>**.
 <Mute text="We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." />
 We zien dan dat $\green{dom f = [-5; +\infty[}$.
 
@@ -90,7 +90,7 @@ We zien dan dat $\green{dom f = [-5; +\infty[}$.
 Het **beeld** <Mute text="(of het bereik)" /> van diezelfde functie kunnen we
 vinden door de grafiek nu te **projecteren op de y-as**. Op de onderstaande
 grafiek zie je het resultaat van deze projectie
-**{{< class "in het groen op de y-as" "green" >}}**.
+**<span class="green">in het groen op de y-as</span>**.
 ![](plt/bld.png)
 <Mute text="We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." />
 Je vindt dat $\green{bld f = [-6; +\infty[}$.
