--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -29,11 +29,11 @@ zijn.
 
 We zien op de grafiek:
 
--   Voor x-waarden kleiner dan $-3$ zijn alle y-waarden **{{< class "negatief" "red" >}}**;
--   Voor x gelijk aan $-3$ is de y-waarde **{{< class "nul" "blue" >}}**;
--   Voor x-waarden tussen $-3$ en $3$ zijn alle y-waarden **{{< class "positief" "green" >}}**;
--   Voor x gelijk aan $3$ is de y-waarde **{{< class "nul" "blue" >}}**;
--   Voor x-waarden groter dan $3$ zijn alle y-waarden **{{< class "negatief" "red" >}}**.
+-   Voor x-waarden kleiner dan $-3$ zijn alle y-waarden **<span class="red">negatief</span>**;
+-   Voor x gelijk aan $-3$ is de y-waarde **<span class="blue">nul</span>**;
+-   Voor x-waarden tussen $-3$ en $3$ zijn alle y-waarden **<span class="green">positief</span>**;
+-   Voor x gelijk aan $3$ is de y-waarde **<span class="blue">nul</span>**;
+-   Voor x-waarden groter dan $3$ zijn alle y-waarden **<span class="red">negatief</span>**.
 
 Dit vatten we als volgt samen in een **tekenschema**:
 
@@ -43,11 +43,11 @@ Dit vatten we als volgt samen in een **tekenschema**:
 
 Het schema toont:
 
--   Als de ingang ($x$) iets tussen $-\infty$ en $-3$ is, is de uitgang ($y$) _{{< class "negatief" "red" >}}_;
--   Als $x=-3$, is $y$ _{{< class "nul" "blue" >}}_;
--   Als $x$ iets tussen $-3$ en $3$ is, is $y$ _{{< class "positief" "green" >}}_;
--   Als $x=3$ is, is $y$ _{{< class "nul" "blue" >}}_;
--   Als $x$ iets tussen $3$ en $+\infty$ is, is $y$ _{{< class "negatief" "red" >}}_.
+-   Als de ingang ($x$) iets tussen $-\infty$ en $-3$ is, is de uitgang ($y$) _<span class="red">negatief</span>_;
+-   Als $x=-3$, is $y$ _<span class="blue">nul</span>_;
+-   Als $x$ iets tussen $-3$ en $3$ is, is $y$ _<span class="green">positief</span>_;
+-   Als $x=3$ is, is $y$ _<span class="blue">nul</span>_;
+-   Als $x$ iets tussen $3$ en $+\infty$ is, is $y$ _<span class="red">negatief</span>_.
 
 ## Tekenschema zonder grafiek
 
@@ -111,7 +111,7 @@ Bijvoorbeeld het teken van
 $y$ voor $x$ tussen $-3$ en $3$. Een eenvoudig getal dat ligt tussen $-3$ en $3$ is
 $0$. Die vullen we in in $f(x) = -x^2 + 9$:
 $$f(\orange{0}) = -(\orange{0})^2 + 9 = \green{9}$$
-We komen een **{{< class "positief" "green" >}}** getal uit, dus we zetten een $\green{+}$ tussen $-3$ en $3$:
+We komen een **<span class="green">positief</span>** getal uit, dus we zetten een $\green{+}$ tussen $-3$ en $3$:
 
 | Ingang $x$             | $-\infty$ |     | $-3$       |             | $3$        |     | $+\infty$ |
 | ---------------------- | --------- | --- | ---------- | ----------- | ---------- | --- | --------- |
@@ -119,7 +119,7 @@ We komen een **{{< class "positief" "green" >}}** getal uit, dus we zetten een $
 
 Voor een x-waarde tussen $-\infty$ en $-3$, kunnen we $-5$ nemen.
 $$f(\orange{-5}) = -(\orange{-5})^2 + 9 = -25 + 9 = \red{-16}$$
-Invullen geeft een **{{< class "negatief" "red" >}}** getal, dus we zetten een $\red{-}$ tussen $-\infty$ en $-3$:
+Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $-\infty$ en $-3$:
 
 | Ingang $x$             | $-\infty$ |           | $-3$       |             | $3$        |     | $+\infty$ |
 | ---------------------- | --------- | --------- | ---------- | ----------- | ---------- | --- | --------- |
@@ -127,7 +127,7 @@ Invullen geeft een **{{< class "negatief" "red" >}}** getal, dus we zetten een $
 
 Voor een x-waarde tussen $3$ en $+\infty$, ten slotte, kunnen we
 $5$ nemen. $$f(\orange{5}) = -(\orange{5})^2 + 9 = -25 + 9 =
-\red{-16}$$ Invullen geeft een **{{< class "negatief" "red" >}}** getal, dus we zetten een $\red{-}$ tussen $3$ en
+\red{-16}$$ Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $3$ en
 $+\infty$:
 
 | Ingang $x$             | $-\infty$ |           | $-3$       |             | $3$        |           | $+\infty$ |
