--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -57,7 +57,7 @@ een nulpunt altijd 0 is**. Nulpunten zijn met andere woorden de punten waar de
 
 Hieronder staat de grafiek getekend van de functie $f(x) = -x^2 + 9$ die de
 nul*waarden* $x=-3$ en $x=3$ heeft en dus de nul*punten* $(-3,~0)$ en $(3,~0)$.
-De twee nulpunten zijn aangeduid in het **{{< class "oranje" "orange" >}}**.
+De twee nulpunten zijn aangeduid in het **<span class="orange">oranje</span>**.
 
 ![](plt/nulpunten.png)
 
